# psyassess

./: app.py  data.py  pyproject.toml  utils.py
tables/: correspondency.py
tables/test5digitos/: table.csv  table_orig.csv
